# ML-Equity-Ranking

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PRIVACY.md  README.md  dashboard.py  docker-compose.yml  launch.sh  main.py  pyproject.toml  requirements.txt  run_all.py  setup.py
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
.streamlit/: config.toml
api/: __init__.py  app.py  routes.py
backend/: .env.example  main.py  requirements.txt
backend/app/api/: routes.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  portfolio.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: __init__.py  settings.py
configs/: config.yaml  models.yaml
core/: __init__.py  exceptions.py  types.py  utils.py
dashboard/: __init__.py  app.py
dashboard/components/: charts.py
dashboard/pages/: backtest.py  correlation.py  executive.py  experiments.py  factors.py  feature_importance.py  heatmap.py  home.py  models.py  news.py  portfolio.py  research.py  risk.py
data/: README.md  __init__.py  loader.py  quality.py
explainability/: __init__.py  importance.py  partial_dep.py
factors/: __init__.py  base.py  factory.py  growth.py  liquidity.py  momentum.py  profitability.py  quality.py  value.py  volatility.py
models/: __init__.py  base.py  ensemble.py  factory.py  linear.py  neural.py  ranker.py  tree.py  tuning.py
news/: __init__.py  events.py  ingestion.py
nlp/: __init__.py  sentiment.py
notebooks/: ML-Equity-Ranking-Workflow.ipynb
portfolio/: __init__.py  black_litterman.py  constraints.py  factor_model.py  mean_variance.py  min_variance.py  risk_parity.py
research/: __init__.py  experiments.py  features.py  pipeline.py  run.py
risk/: __init__.py  covariance.py  factor_risk.py  metrics.py
scripts/: generate_secrets.sh
signal_processing/: __init__.py  combination.py  normalization.py  orthogonalization.py
src/: __init__.py  accelerated.py  cli.py  compliance.py  dashboard_theme.py  data_loader.py  evaluation.py  features.py  market_intelligence.py  models.py  news.py  nlp.py  pipeline.py  portfolio.py  reporting.py  security.py  serving.py  sp500.py  validation.py
tests/: conftest.py  test_accelerated.py  test_cli.py  test_config.py  test_core.py  test_dashboard_theme.py  test_data.py  test_evaluation.py  test_explainability.py  test_factors.py  test_features.py  test_leakage.py  test_market_intelligence.py  test_models.py  test_news_reporting.py  test_nlp.py  test_pipeline.py  test_portfolio.py  test_research.py  test_risk.py  test_security.py  test_serving.py  test_signal.py  test_sp500.py  test_validation.py
validation/: __init__.py  backtesting.py  metrics.py  purged_cv.py  walk_forward.py
