[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-equity-ranking"
version = "0.3.1"
description = "Cross-sectional equity ranking, walk-forward validation, and long/short portfolio simulation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# Runtime dependencies are mirrored in requirements.txt so the existing
# `pip install -r requirements.txt` workflow keeps working. Keep the two in sync.
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.9.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "yfinance>=0.2.28",
    "numba>=0.59.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
    "black>=24.3.0",
    "ruff>=0.4.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
ml-equity = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: import sorting.
select = ["E", "F", "I"]
# E501 (line length) is handled by black; ignore in ruff to avoid double-reporting.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Imports intentionally follow pytest.importorskip guards.
"tests/test_serving.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
